@@ -33,6 +33,7 @@ xine-lib (1-rc4)
   * add iso-8859-9 and iso-8859-15 codepages into xine fonts
   * work around freezing with arts on BSD
   * documentation about xine fonts
+  * make the protocol in MMS configurable - TCP, HTTP or autoprobe
 
 xine-lib (1-rc3a)
   * new subtitle formats: jacobsub, subviewer 2.0, subrip 0.9
